--- a/src/app/survey/survey.component.html
+++ b/src/app/survey/survey.component.html
@@ -1,5 +1,11 @@
 <div class="wrapper">
     <div class="hero-unit">
         <h1>Good Moring {{ name }}!</h1>
+        <h3>Today is {{ date }}</h3>
+        <h4>How are you feeling?</h4>
+        <ul class="pager">
+            <li><a href="#">Previous</a></li>
+            <li><a href="#">Next</a></li>
+          </ul>
     </div>
 </div>
