--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,6 @@
   <title>{{ title }}</title>
 </head>
 <body>
-  <app-survey></app-survey>
+  <app-user-profile></app-user-profile>
 </body>
 </html>
