--- a/src/app/survey/survey.component.css
+++ b/src/app/survey/survey.component.css
@@ -1,22 +1,16 @@
-.wrapper {
-    background-color: navajowhite;
-}
-.hero-unit {
-    background-color: white;
-    display: block;
-    width: 500px;
-    height: 500px;
-    margin: auto;
-    margin-top: 200px;
-    border-radius: 40px;
-}
 
-h1, h3, h4 {
+
+h2, h3, h4 {
     text-align: center;
-    padding-top: 50px;
+    padding-top: 40px;
 }
 
 #rating {
     margin-left: 120px;
     padding-top: 40px;
+}
+
+#logout {
+    margin-left: 190px;
+    margin-top: 50px;
 }
