--- a/src/app/survey/survey.component.html
+++ b/src/app/survey/survey.component.html
@@ -1,26 +1,27 @@
-<div class="wrapper">
-  <div class="hero-unit">
-    <h1>Good Moring {{ name }}!</h1>
-    <h3>Today is {{ date }}</h3>
-    <h4>How are you feeling?</h4>
-    <div id="rating">
-      <span>
-        <button type="button" class="btn btn-outline-secondary mr-2">
-          1
-        </button>
-        <button type="button" class="btn btn-outline-secondary mr-2">
-          2
-        </button>
-        <button type="button" class="btn btn-outline-secondary mr-2">
-          3
-        </button>
-        <button type="button" class="btn btn-outline-secondary mr-2">
-          4
-        </button>
-        <button type="button" class="btn btn-outline-secondary mr-2">
-          5
-        </button>
-      </span>
-    </div>
+<div *ngIf="auth.user$ | async as user" class="hero-unit">
+  <h2>Good Morning {{ user.displayName }}!</h2>
+  <h3>Today is {{ date }}</h3>
+  <h4>How are you feeling?</h4>
+  <div id="rating">
+    <span>
+      <button type="button" class="btn btn-outline-secondary mr-2">
+        1
+      </button>
+      <button type="button" class="btn btn-outline-secondary mr-2">
+        2
+      </button>
+      <button type="button" class="btn btn-outline-secondary mr-2">
+        3
+      </button>
+      <button type="button" class="btn btn-outline-secondary mr-2">
+        4
+      </button>
+      <button type="button" class="btn btn-outline-secondary mr-2">
+        5
+      </button>
+    </span>
   </div>
+  <button type="button" id="logout" (click)="auth.signOut()"> 
+    Log Out
+  </button>
 </div>
