--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,16 @@
 html {
     background-color: navajowhite;
 }
+.showData {
+    background-color: navajowhite;
+}
+
+.wrapper {
+    display: block;
+    background-color: white;
+    width: 500px;
+    height: 500px;
+    margin: auto;
+    margin-top: 200px;
+    border-radius: 40px;
+}
