--- a/src/app/survey/survey.component.css
+++ b/src/app/survey/survey.component.css
@@ -1,16 +1,16 @@
 
 
-h2, h3, h4 {
+h2, h3 {
     text-align: center;
     padding-top: 40px;
 }
 
-#rating {
-    margin-left: 120px;
-    padding-top: 40px;
+#startSurvey {
+    margin-left: 150px;
+    margin-top: 40px;
 }
 
 #logout {
     margin-left: 190px;
-    margin-top: 50px;
+    margin-top: 70px;
 }
