--- a/src/app/add-mood-item/add-mood-item.component.html
+++ b/src/app/add-mood-item/add-mood-item.component.html
@@ -23,7 +23,7 @@
       <input type="text" class="form-control" id="onMyMind" name="onMyMind" [(ngModel)]="moodItem.onyourmind" required>
     </div>
 
-    <button type="submit" class="btn btn-success">Submit</button>
+    <button type="submit" id="submit" class="btn btn-success">Submit</button>
 
   </form>
 </div>
