--- a/src/app/daily-quote/daily-quote.component.css
+++ b/src/app/daily-quote/daily-quote.component.css
@@ -2,7 +2,29 @@
     padding-top: 30px;
     font-size: 20px;
 }
-
+#summary {
+    margin-bottom: 15px;
+    font-family: 'Pacifico', cursive; 
+}
 .quote {
-    margin-top: 50px;
+    margin-top: 30px;
+    margin-left: 5;
+}
+
+h4, h5{
+    font-family: 'Crimson Text', serif;
+}
+
+h6 {
+    padding-top: 30px;
+    text-align: center;
+    font-size: 20px;
+}
+
+.card {
+    padding: 5px;
+}
+
+#past {
+    font-size: 25px;
 }
