--- a/src/app/daily-quote/daily-quote.component.html
+++ b/src/app/daily-quote/daily-quote.component.html
@@ -1,23 +1,26 @@
 <div class="container">
-
     <div class="mood">
+      <h2 id="summary">Summary</h2>
         <p>
+          <span id="feeling">
+            <p>You are feeling </p>
             <button type="button" class="btn btn-outline-primary" (click)="isCollapsed = !isCollapsed"
                     [attr.aria-expanded]="isCollapsed" aria-controls="collapseExample">
                 {{ feeling$ }}
             </button>
+          </span>
           </p>
           <div id="collapseExample" [ngbCollapse]="!isCollapsed">
             <div class="card">
               <div class="card-body">
                 <div *ngIf="currentMood$ >= 3; else stressed">
                     <p>Great that you are having a nice morning, here is what you had on your mind in the past:</p>
-                    <p>{{ moods$ }}</p>
+                    <p id="past">{{ moods$ }}</p>
                 </div>
                 <ng-template #stressed>
                     <p>Everything is going to be allright, don't let your mind tell you otherwise, here is something you were
                         greatful for:</p>
-                    <p>{{ moods$ }}</p>
+                    <p id="past">{{ moods$ }}</p>
                 </ng-template>
               </div>
             </div>
@@ -26,11 +29,13 @@
     </div>
 
     <div class="quote">
-        <h3>Your daily quote</h3>
         <h4>{{ quote$ }}</h4>
         <h5>- {{ author$ }}</h5>
     </div>
-    <h4>See you tomorrow!</h4>
+    <div *ngIf="auth.user$ | async as user" class="streak">
+      {{ user.streak }}
+    </div>
+    <h6>See you tomorrow!</h6>
 
 
 </div>
