--- a/src/app/survey/survey.component.css
+++ b/src/app/survey/survey.component.css
@@ -6,11 +6,18 @@ h2, h3 {
 }
 
 #startSurvey {
-    margin-left: 150px;
-    margin-top: 40px;
+    margin-left: 175px;
+    margin-top: 35px;
 }
 
 #logout {
-    margin-left: 190px;
+    margin-left: 210px;
     margin-top: 70px;
+}
+
+#header {
+    margin-top: 20px;
+    font-size: 30px;
+    text-align: center;
+    font-family: 'Pacifico', cursive; 
 }
