--- a/src/app/survey/survey.component.html
+++ b/src/app/survey/survey.component.html
@@ -1,13 +1,16 @@
 
 <div *ngIf="auth.user$ | async as user" class="hero-unit">
   <div *ngIf="!startSurvey; else survey">
+    <div id="header">
+      Better Days
+    </div>
     <h2>Good Morning {{ user.displayName }}!</h2>
     <h3>Today is {{ date }}</h3>
-      <button type="button" id="startSurvey" (click)="onClick()">
+      <button type="button" class="btn btn-outline-primary mr-2" id="startSurvey" (click)="onClick()">
         Start daily survey
       </button>
       <div>
-      <button type="button" id="logout" (click)="auth.signOut()">
+      <button type="button" class="btn btn-outline-primary mr-2" id="logout" (click)="auth.signOut()">
         Log Out
       </button>
     </div>
