--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -2,7 +2,7 @@
 <div class="hero-unit">
   <img id="img" src ="../../assets/images/google_logo.png" width="100" height="100">
   <div>
-    <button id="signIn" (click)="auth.googleSignin()">
+    <button id="signIn" class="btn btn-outline-primary mr-2" (click)="auth.googleSignin()">
       Sign in with Google
     </button>
   </div>
