make chart view

--- a/src/app/add-mood-item/add-mood-item.component.html
+++ b/src/app/add-mood-item/add-mood-item.component.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="form-group">
-      <label for="onMyMind">What are you stressing about?</label>
+      <label for="onMyMind">What are you stressed / worried about?</label>
       <input type="text" class="form-control" id="onMyMind" name="onMyMind" [(ngModel)]="moodItem.onyourmind" required>
     </div>
 
