--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
       <!-- template will replace this div -->
     </div>
 
-    <!-- User NOT logged in -->
+    <!-- User not logged in -->
     <ng-template #guest>
       <app-user-profile></app-user-profile>
     </ng-template>
