--- a/src/app/daily-quote/daily-quote.component.html
+++ b/src/app/daily-quote/daily-quote.component.html
@@ -11,7 +11,7 @@
           </div>
           <div>
             <button type="button" class="btn btn-outline-primary" id="reflectBut" (click)="showReflect = true">
-              Reflection on your curent mood
+              Reflection on your current mood
             </button>
           </div>
           <button type="button" class="btn btn-outline-primary" id="chartBut" (click)="changeToChart()">
