--- a/src/app/past-reflection/past-reflection.component.html
+++ b/src/app/past-reflection/past-reflection.component.html
@@ -4,7 +4,7 @@
       <h4>Great that you are having a nice morning, life has it's ups and downs so here is an example of what you were worried about in the past:</h4>
     </div>
     <ng-template #stressed>
-      <h4>Everything is going to be allright, don't let your mind tell you otherwise. To cheer you up, here is something you were greatful for in the past:</h4>
+      <h4>Everything is going to be allright, don't let your mind tell you otherwise. To cheer you up, here is something you were grateful for in the past:</h4>
     </ng-template>
     <div class="pastRef">
       <h4 id="past">"{{ pastFeeling[0] }}"&nbsp;</h4>
