--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,7 @@ html {
     height: 550px;
     margin: auto;
     margin-top: 150px;
+    margin-bottom: 150px;
     border-radius: 40px;
     border-color: coral;
     border-style: solid;
