--- a/src/app/survey/survey.component.html
+++ b/src/app/survey/survey.component.html
@@ -4,7 +4,7 @@
     <div id="header">
       Better Days
     </div>
-    <h2>Good Morning {{ user.displayName }}!</h2>
+    <h2>Good morning {{ user.displayName }}!</h2>
     <h3>Today is {{ date }}</h3>
       <button type="button" class="btn btn-outline-primary mr-2" id="startSurvey" (click)="onClick()">
         Start daily survey
